--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="#comida">Comida</a>
   </nav>
 </header>
-<div class="main" role="main">
+<main>
 
   <section id="intro" class="intro">
     <video class="background-video" autoplay muted loop playsinline> <!-- playsinline evita la pantalla completa en Apple Safari-->
@@ -152,7 +152,7 @@
       </div>
     </div>
   </section>
-</div>
+</main>
 <footer role="contentinfo">
   <p>© 2025 アビレス統合職業訓練センター (CIFP Avilés)</p>
   <p>作成者 Daniel Seisdedos | 2º DAW: Diseño de Interfaces Web</p>
